fixed the vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 	color: #ffffff;
 	background-color: #505050;
 	width: 100%;
-	height: 40px;
+	height: 45px;
 	text-align: center;
 	position: absolute;
 	left: 0;
